shop-ui/k8s/app.yml
#@ load("@ytt:data", "data")
apiVersion: v1
kind: Namespace
metadata:
  name: sock-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sock-ui
  name: sock-ui
  labels:
    app: sock-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sock-ui
  template:
    metadata:
      labels:
        app: sock-ui
    spec:
      containers:
      - name: sock-ui
        image: ghcr.io/making/spring-socks-ui
        resources:
          limits:
            memory: 384Mi
          requests:
            memory: 384Mi
        readinessProbe:
          httpGet:
            path: /management/health/readiness
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /management/health/liveness
            port: 8080
          initialDelaySeconds: 180
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  namespace: sock-ui
  name: sock-ui
  labels:
    app: sock-ui
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sock-ui
  type: LoadBalancer
