shop-ui/k8s/ingress.yml
#@ load("@ytt:data", "data")
#@ if str(data.values.use_ingress) != 'False':
#@ domain_name = data.values.sock_ui_external_url.replace("http://", "").replace("https://", "")
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-ui
  namespace: sock-ui
  annotations:
    cert-manager.io/cluster-issuer: #@ data.values.cluster_issuer_name
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: #@ "{}-tls".format(domain_name.replace(".", "-"))
    hosts:
    - #@ domain_name
  rules:
  - host: #@ domain_name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sock-ui
            port:
              number: 80
#@ end
